# src/controllers/ApiRoute.js
@@ -2,8 +2,8 @@ import express from 'express';
 const router = express.Router();
 import { SigningCosmWasmClient, CosmWasmClient } from '@cosmjs/cosmwasm-stargate';
 import { DirectSecp256k1HdWallet } from '@cosmjs/proto-signing';
-import { Web3Storage, File } from 'web3.storage';
-import { makeGatewayURL } from '../helpers/helpers.js'
+import {Web3Storage, File} from 'web3.storage';
+import {makeGatewayURL} from '../helpers/helpers.js'
 import dotenv from 'dotenv';
 dotenv.config();
 
@@ -11,6 +11,9 @@ const mnemonic = process.env.MNEMONIC;
 const rpcEndpoint = process.env.RPC;
 const contractAddress = process.env.CONTRACT;
 const web3Token = process.env.WEB3_STORAGE_TOKEN;
+const tokenOwner = process.env.TOKEN_OWNER;
+const tokenId = process.env.TOKEN_ID;
+const tokenUri = process.env.TOKEN_ID;
 const storage = new Web3Storage({ token: web3Token });
 
 let wallet;
@@ -52,7 +55,7 @@ router.route('/Image/Upload').post(async (req, res) => {
   /* 	#swagger.tags = ['Image']
   #swagger.description = 'Upload image to IPFS' */
 
-  /*    #swagger.consumes = ['multipart/form-data']  
+  /*    #swagger.consumes = ['multipart/form-data']
       #swagger.parameters['image'] = {
           in: 'formData',
           type: 'file',
@@ -61,7 +64,6 @@ router.route('/Image/Upload').post(async (req, res) => {
   } */
 
   const imageFile = req.files.image;
-
   try {
     const filesObj = makeFileObjects(imageFile);
     const cid = await storage.put(filesObj);
@@ -105,10 +107,13 @@ router.route('/Token/Mint').post(async (req, res) => {
 
   const mintMsg = {
     mint: {
-      token_id: req.body.token_id,
-      owner: req.body.owner,
-      token_uri: req.body.token_uri,
-      extension: req.body.extension
+      token_id: tokenId,
+      owner: tokenOwner,
+      token_uri: tokenUri,
+      extension: {
+        diplomas: req.body.diplomas,
+        images: req.body.extension,
+      }
     }
   };
 
@@ -162,48 +167,87 @@ router.route('/Token/Get/:id').get(async (req, res) => {
   }
 })
 
-router.post('/Token/Transfer', async (req, res, next) => {
-  /* 	#swagger.tags = ['Token']
-      #swagger.description = 'Transfer NFT Token' */
+// router.post('/Token/Transfer', async (req, res, next) => {
+//   /* 	#swagger.tags = ['Token']
+//       #swagger.description = 'Transfer NFT Token' */
+//
+//   /*  #swagger.parameters['obj'] = {
+//           in: 'body',
+//           description: 'Transfer Information',
+//           schema: { $ref: '#/definitions/Transfer' }
+//   } */
+//
+//   if (!wallet) {
+//     wallet = await getWallet();
+//   }
+//   if (!firstAccount) {
+//     firstAccount = await get1stAccount(wallet);
+//   }
+//   if (!signingClient) {
+//     signingClient = await getSigningAuraWasmClient(wallet);
+//   }
+//   const transMsg = {
+//     transfer_nft:
+//     {
+//       token_id: req.body.token_id,
+//       recipient: req.body.recipient,
+//     }
+//   }
+//
+//   const fee = {
+//     amount: [
+//       {
+//         denom: 'uaura',
+//         amount: '1000',
+//       },
+//     ],
+//     gas: '152375',
+//   }
+//
+//   try {
+//     const result = await signingClient.execute(firstAccount.address, contractAddress, transMsg, fee);
+//     res.status(200).json({
+//       data: [result],
+//       message: 'Tranfer Result'
+//     });
+//   } catch (err) {
+//     res.status(500).json({
+//       data: [err.message],
+//       message: 'Error'
+//     });
+//   }
+// })
 
-  /*  #swagger.parameters['obj'] = {
-          in: 'body',
-          description: 'Transfer Information',
-          schema: { $ref: '#/definitions/Transfer' }
-  } */
+router.route('/Image/Get/:cid').get(async (req, res) => {
+  const cidString = String(req.params.cid);
+  const fileName = String(req.query.fileName)
+  const cidRes = await storage.get(cidString)
+  console.log(`Got a response! [${cidRes.status}] ${cidRes.statusText}`)
+  if (!cidRes.ok) {
+    res.status(500).json({
+      data: `failed to get ${cidString} - [${cidRes.status}] ${cidRes.statusText}`,
+      message: 'Error'
+    });
+  }
 
-  if (!wallet) {
-    wallet = await getWallet();
-  }
-  if (!firstAccount) {
-    firstAccount = await get1stAccount(wallet);
-  }
-  if (!signingClient) {
-    signingClient = await getSigningAuraWasmClient(wallet);
-  }
-  const transMsg = {
-    transfer_nft:
-    {
-      token_id: req.body.token_id,
-      recipient: req.body.recipient,
+  let result = {}
+  // unpack File objects from the response
+  const files = await cidRes.files()
+  for await (const file of files) {
+    if (file.name === fileName){
+      const metadataGatewayURL = makeGatewayURL(cidString, 'metadata.json');
+      const imageGatewayURL = makeGatewayURL(cidString, fileName);
+      const imageURI = `ipfs://${cidString}/${fileName}`;
+      const metadataURI = `ipfs://${cidString}/metadata.json`;
+      result = {
+        data: { cidString, metadataGatewayURL, imageGatewayURL, imageURI, metadataURI }
+      }
     }
   }
-
-  const fee = {
-    amount: [
-      {
-        denom: 'uaura',
-        amount: '1000',
-      },
-    ],
-    gas: '152375',
-  }
-
   try {
-    const result = await signingClient.execute(firstAccount.address, contractAddress, transMsg, fee);
     res.status(200).json({
       data: [result],
-      message: 'Tranfer Result'
+      message: 'Found Result'
     });
   } catch (err) {
     res.status(500).json({
