# swagger-output.json
@@ -5,7 +5,7 @@
     "title": "EduNFT API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "host": "localhost:3000",
+  "host": "localhost:8050",
   "basePath": "/",
   "tags": [
     {
@@ -114,20 +114,20 @@
         }
       }
     },
-    "/Token/Transfer": {
-      "post": {
-        "tags": [
-          "Token"
-        ],
-        "description": "Transfer NFT Token",
+    "/Image/Get/{cid}": {
+      "get": {
+        "description": "",
         "parameters": [
           {
-            "name": "obj",
-            "in": "body",
-            "description": "Transfer Information",
-            "schema": {
-              "$ref": "#/definitions/Transfer"
-            }
+            "name": "cid",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "fileName",
+            "in": "query",
+            "type": "string"
           }
         ],
         "responses": {
@@ -145,45 +145,18 @@
     "Mint": {
       "type": "object",
       "properties": {
-        "token_id": {
-          "type": "string",
-          "example": "token_nft"
+        "diplomas": {
+          "type": "object",
+          "properties": {}
         },
-        "owner": {
-          "type": "string",
-          "example": "aura1mmsenr5nejugxqv6jtetlckwjhsmft7f8dqud4"
-        },
-        "token_uri": {
-          "type": "string",
-          "example": "ANFT"
-        },
-        "extension": {
+        "images": {
           "type": "object",
           "properties": {}
         }
       },
       "required": [
-        "token_id",
-        "owner",
-        "token_uri",
-        "extension"
-      ]
-    },
-    "Transfer": {
-      "type": "object",
-      "properties": {
-        "token_id": {
-          "type": "string",
-          "example": "token_nft"
-        },
-        "recipient": {
-          "type": "string",
-          "example": "aura1n9dk7hvqtqrpxuc52w9qsmd95dm83ccjum2636"
-        }
-      },
-      "required": [
-        "token_id",
-        "recipient"
+        "diplomas",
+        "images"
       ]
     }
   }
